# HTML-Validator

./: CHANGES  MANIFEST  Makefile.PL  README  Validator.pm.dummy  Validator.pm.in  configure  configure.in
t/: html.t  invalid.html  invalid.xml  valid.html  valid.xml  xhtml.html  xhtml.t  xml.t
